# lang-image-benchmark

./: .gitignore  LICENSE  README.md  lang-image-benchmark.sln  run_all.sh
c/: Makefile  README.md  main.c
cpp/: Makefile  README.md  main.cpp
csharp/: Program.cs  README.md  csharp_bench.csproj
csharp_images/: .gitignore  Program.cs  csharp_images.csproj  csharp_images.sln
csharp_images/images/: images.Designer.cs
elixir/: README.md  mix.exs
elixir/lib/: bench.ex
haskell/: README.md  bench.cabal
haskell/app/: Main.hs
pyimages/: bench_input.py  benchmark_result.py  environment.yml  naive_implementation.py  numba_implementation.py  opencv_implementation.py  readme.md  runner.py
python/: README.md  pyproject.toml  run.py
python/benchmarks/: output.py  runner.py  types.py
python/implementations/: __init__.py  base.py  naive.py  numba_impl.py  numpy_impl.py  opencv_impl.py  pillow_impl.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
