cabal-version: 2.4
name:          bench
version:       0.1.0.0
build-type:    Simple

executable bench
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -O2
  build-depends:
    base         >= 4.14 && < 5,
    JuicyPixels  >= 3.3  && < 4,
    vector       >= 0.12 && < 1,
    filepath     >= 1.4  && < 2,
    directory    >= 1.3  && < 2,
    deepseq      >= 1.4  && < 2
